# ADN

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package-lock.json  release.toml
.github/workflows/: check.yml  release.yml
src/: main.rs
src/languages/: mod.rs
src/languages/css/: mod.rs
src/languages/go/: mod.rs
src/languages/html/: mod.rs
src/languages/javascript/: mod.rs
src/languages/json/: mod.rs
src/languages/jsx/: mod.rs
src/languages/python/: mod.rs
src/languages/rust/: mod.rs  rust.rs
src/languages/tsx/: mod.rs
src/languages/typescript/: mod.rs  typescript.rs
src/utilities/: config_managment.rs  mod.rs
