[package]
name = "adn"
version = "0.1.5"
edition = "2021"
description = "🧬 The easy way to install LSP in Helix"
categories = ["development-tools", "lsp", "helix"]
keywords = ["helix", "lsp", "development-tools", "develop", "tools"]
authors = ["Wilovy09"]
license = "MIT"
repository = "https://github.com/Wilovy09/ADN"
homepage = "https://github.com/Wilovy09/ADN"
readme = "README.md"
include = ["**/**/*.rs", "Cargo.toml"]
exclude = ["static/**/*"]

[dependencies]
clap = { version = "4.5.7", features = ["derive", "string"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "Wilovy09/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
