[package]
name = "adn"
version = "0.1.8"
edition = "2021"
description = "🧬 The easy way to install LSP in Helix"
categories = ["development-tools", "lsp", "helix"]
keywords = ["helix", "lsp", "development-tools", "develop", "tools"]
authors = ["Wilovy09"]
license = "MIT"
repository = "https://github.com/Wilovy09/ADN"
homepage = "https://github.com/Wilovy09/ADN"
readme = "README.md"
include = ["**/**/*.rs", "Cargo.toml"]
exclude = ["static/**/*"]

[dependencies]
clap = { version = "4.5.7", features = ["derive", "string"] }
toml_edit = "0.22"
thiserror = "1.0"

[[bin]]
name = "adn"
path = "src/main.rs"

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.13.2"
ci = ["github"]
installers = ["shell", "powershell", "homebrew"]
tap = "Wilovy09/homebrew-tap"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
publish-jobs = ["homebrew"]
pr-run-mode = "plan"
